# BRGSentimentbot

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  .stealth_db.json  .stealth_harvest_db.json  .test_harvest_db.json  CAPTCHA_SETUP.md  CHINA_FINAL_ANALYSIS_REPORT.md  COMPREHENSIVE_SYSTEMS_DOCUMENTATION.md  CONNECTOR_GUIDE.md  CONNECTOR_SUMMARY.md  CONNECTOR_UPGRADES.md  Dockerfile  Dockerfile.bayesian  Dockerfile.streaming  ECONOMIC_PREDICTOR_IMPROVEMENTS_COMPLETE.md  GDP_CALIBRATION_SUMMARY.md  GLOBAL_PERCEPTION_INDEX_GUIDE.md  GPI_INTEGRATION_COMPLETE.md  GPI_SYSTEM_PROOF.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE.txt  LIECHTENSTEIN_ANALYSIS_REPORT.md  LIECHTENSTEIN_FINAL_REPORT.md  LLM_ANALYSIS_README.md  MASTER_SOURCES_README.md  MIGRATION_NOTICE.md  MODEL_IMPROVEMENT_PLAN.md  NEWS_INGESTION_SYSTEM.md  OPENAI_FREE_TIER_GUIDE.md  OPENAI_QUOTA_DIAGNOSIS.md  OPTIMIZED_PIPELINE_SUMMARY.md  PRODUCTION_READINESS_COMPLETE.md  QUICK_START.md  README.md  README_FINAL.md  README_PRODUCTION.md  (+160 more)
.github/workflows/: ci.yml  gdp-calibration-ci.yml
.streamlit/: config.toml
config/: connectors.yaml  defaults.yaml  master_config.yaml  master_sources.yaml  master_sources.yaml.backup  master_sources_enhanced.yaml  master_sources_expanded.yaml  master_sources_production.yaml  rss_registry.yaml  sites.yaml  sources.yaml  stealth_harvest.yaml  stealth_harvester_config.yaml  test_harvest.yaml  test_harvest_new.yaml  topic_taxonomies.yaml
config/.backup_sources/: all_sources.yaml  crypto_seeds.txt  expanded_seeds.txt  fortress_seeds.txt  global_news_seeds.txt  master_sources.yaml  seeds.txt  skb_sources.yaml  sources.crypto.yaml  sources.example.yaml  sources.yaml  stealth_sources.yaml  test_seeds.txt
data/: backtest_samples.csv  ci_validation_report.json  risk_intelligence.db  walk_forward_report.json
data/alpha_models/: alpha_model_20250917.pkl
data/historical/: backtest_report_20250916_002814.json  backtest_report_20250916_002923.json  backtest_report_20250916_002945.json
docs/: CONNECTORS.md  privacy_template.md
final_test/: articles_1580f5d8.jsonl  dashboard_run_summary_1580f5d8.txt  run_summary_1580f5d8.json
k8s/: analyzer-deployment.yaml  configmap-priors.yaml  configmap-rules.yaml  fetcher-deployment.yaml  forecast-deployment.yaml  streaming-deployment.yaml
k8s/chart/: Chart.yaml
models/gdp/: DEU_elastic.pkl  DEU_gbm.pkl  DEU_rf.pkl  DEU_ridge.pkl  DEU_scaler.pkl  FRA_elastic.pkl  FRA_gbm.pkl  FRA_rf.pkl  FRA_ridge.pkl  FRA_scaler.pkl  GBR_elastic.pkl  GBR_rf.pkl  (+20 more)
output/: articles_0589c8a1.jsonl  articles_0a922ea6.jsonl  articles_1391f490.jsonl  articles_1ebb6cb4.jsonl  articles_37569ef0.jsonl  articles_3d07a209.jsonl  articles_5bf3442c.jsonl  articles_615ce066.jsonl  articles_7d1399c6.jsonl  articles_8daaaab5.jsonl  articles_b8f4c7db.jsonl  articles_c2e8bbca.jsonl  articles_faf271f4.jsonl  china_data_20250916_014917.json  china_report_20250916_014917.txt  connector_results_20250829_220158.json  connector_results_20250829_220248.json  connector_results_20250829_220351.json  connector_results_20250829_222332.json  connector_results_20250829_222434.json  connector_results_20250829_223159.json  connector_results_20250829_223936.json  connector_results_20250829_223959.json  connector_results_20250829_224014.json  connector_results_20250829_232825.json  connector_results_20250829_232844.json  connector_results_20250829_233015.json  connector_results_20250829_233605.json  connector_results_20250829_233937.json  connector_results_20250830_000144.json  connector_results_20250830_000417.json  connector_results_20250830_000424.json  connector_results_20250830_140615.json  connector_results_20250830_153452.json  dashboard_run_summary_0589c8a1.txt  dashboard_run_summary_0a922ea6.txt  dashboard_run_summary_1391f490.txt  dashboard_run_summary_1ebb6cb4.txt  dashboard_run_summary_2a3f5a1d.txt  dashboard_run_summary_2a68152a.txt  (+49 more)
outputs/: FINAL.txt
prod_test_artifacts/: phase1_canary_alerts.json  phase1_canary_metrics.json  phase2_dedup_report.json  phase2_freshness_analysis.json  phase2_functional_metrics.json  phase2_source_distribution.json
prompts/: system_prompt.txt  task_prompt.txt
scripts/: sample_gold_set.py
sentiment_bot/: __init__.py  __main__.py  advanced_economic_predictors.py  aggregate.py  alpha_vantage_news.py  analyzer.py  api_source_registry.py  bayesian.py  bridge_dfm_models.py  browser_pool.py  chat_agent.py  cli.py  cli_enhanced.py  cli_enhanced_v2.py  cli_optimized.py  cli_skb.py  cli_skb_optimized.py  cli_unified.py  comprehensive_economic_predictors.py  comprehensive_predictors.py  config.py  consumer_confidence_analyzer.py  content_filter.py  corrected_economic_predictors.py  country_aware_predictor.py  custom_logging.py  domain_policy.py  economic_predictor.py  economic_predictor_wrapper.py  economy_aware_gdp_predictor.py  embeddings.py  enhanced_economic_predictors.py  enhanced_predictive_models.py  enhanced_stable_scraper.py  enhanced_stealth_config.py  ensemble_predictor.py  explain.py  fallback_data_sources.py  fallback_mechanisms.py  feature_store.py  (+81 more)
state/: backtest_results.db  brg_sentiment.sqlite  llm_cache.sqlite  performance_monitor.db  rss_health.db  scraping_monitor.sqlite
test_output/: articles_bdbca7b0.csv  articles_bdbca7b0.jsonl  articles_decbb10b.csv  articles_decbb10b.jsonl  dashboard_run_summary_bdbca7b0.txt  dashboard_run_summary_decbb10b.txt  run_summary_bdbca7b0.json  run_summary_decbb10b.json
tests/: __init__.py  conftest.py  test_aggregate.py  test_analyzer.py  test_bayesian.py  test_chat_agent.py  test_cli.py  test_comparator.py  test_config.py  test_connector_upgrades.py  test_connectors.py  test_dynamic_alpha.py  test_embeddings.py  test_fetcher.py  test_forecast.py  test_gold_regression.py  test_integrated_systems.py  test_interactive.py  test_interactive_random.py  test_published_parse.py  test_ramme_label_thresholds.py  test_rules.py  test_scheduler.py  test_select_parsing.py  test_skb_system.py  test_specification_requirements.py  test_topic_relevance.py  test_vector_store.py
(+135 files in other folders)
