[tool.poetry]
name = "brgsentimentbot"
version = "0.3.0"
description = "Async news sentiment analysis CLI bot"
authors = ["BRG <dev@example.com>"]
packages = [{ include = "sentiment_bot" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
feedparser = "^6.0.11"
aiohttp = "^3.9.5"
rapidfuzz = "^3.6.1"
vaderSentiment = "^3.3.2"
typer = "^0.12.3"
rich = "^13.0"
aiosqlite = "^0.19.0"
pyyaml = "^6.0.1"
numpy = ">=1.23.0,<2.0"
pydantic-settings = "^2.3.1"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.12.0"
lxml-html-clean = "^0.4.2"
brotli = "^1.1.0"

# Optional for enhanced features
transformers = {version = "^4.41.2", optional = true}
torch = {version = "2.2.2", optional = true}
openai = {version = "^1.30.1", optional = true}
spacy = {version = ">=3.7,<3.8", optional = true}
newsapi-python = {version = "^0.2.7", optional = true}

[tool.poetry.extras]
ml = ["transformers", "torch", "spacy"]
llm = ["openai"]
newsapi = ["newsapi-python"]
all = ["transformers", "torch", "spacy", "openai", "newsapi-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.12.0"
ruff = "^0.4.8"
black = "^24.4.2"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
bsgbot = "sentiment_bot.cli_unified:app"

[tool.pytest.ini_options]
addopts = "-q --cov=sentiment_bot --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
